// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render Expense summary with no expense 1`] = `<div />`;

exports[`should render Expense summary with expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     expenses totalling 
    $2.40
  </p>
</div>
`;

exports[`should render Expense summary with one expense 1`] = `
<div>
  <p>
    Viewing 
    1
     expense totalling 
    $5.00
  </p>
</div>
`;
